--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="game.js"></script>
+    <script type="module" src="src/main.js"></script>
 </body>
 </html>
 
